# cdmx-metrobus-api

./: .dockerignore  Dockerfile  README.md  apprunner.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml  test.yaml
app/: main.py  models.py
app/data/: lines-geojson.json  stops-geojson.json
app/routers/: infra.py  realtime.py
app/settings/: app.py
app/utils/: parsers.py  position.py
tests/: test_root.py
