[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["keanrawr <the.keanraw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
geojson-pydantic = "^1.0.0"
requests = "^2.28.0"
gtfs-realtime-bindings = "^1.0.0"
protobuf = "3.20.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
