[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "keanrawr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi (>=0.103.1,<1.0.0)",
  "geojson-pydantic (>=1.0.0,<2.0.0)",
  "requests (>=2.28.0,<3.0.0)",
  "gtfs-realtime-bindings (>=1.0.0,<2.0.0)",
  "protobuf (>=3.20.1,<4.0.0)",
  "uvicorn (>=0.17.6,<1.0.0)",
  "pydantic-settings (>=2.0.3,<3.0.0)",
  "httpx (>=0.25.0,<0.26.0)"
]

[poetry.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
